--- a/etc/foot.html
+++ b/etc/foot.html
@@ -6,21 +6,8 @@
   <title>Sports Negotiation Game</title>
   
   <!-- Pico.css -->
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
 
-  <style>
-    /* Optional minor customizations */
-    main {
-      margin-top: 2rem;
-    }
-    #team li {
-      margin: 0.5rem 0;
-      padding: 0.5rem;
-      /* If you see weird background issues, remove the var() usage: */
-      background-color: var(--background-contrast);
-      border-radius: 5px;
-    }
-  </style>
 </head>
 
 <body>
