--- a/etc/foot.html
+++ b/etc/foot.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sports Negotiation Game</title>
   <style>
-.media (prefers-color-scheme: dark) {
-  img {
-    opacity: .75;
-    transition: opacity .5s ease-in-out;
-  }
-  img:hover {
-    opacity: 1;
-  }
+body{
+    background-color: #333333;
+    color: #ffffff;
+}
+
+button {
+    background-color: #17a2b8;
+}
+
 </style>
   </head>
 
