--- a/etc/writeonceruneverywhere.html
+++ b/etc/writeonceruneverywhere.html
@@ -41,7 +41,7 @@
             // Register Service Worker
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', () => {
-                    navigator.serviceWorker.register('/service-worker.js')
+                    navigator.serviceWorker.register('https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/etc/service-worker.js')
                         .then(registration => {
                             console.log('Service Worker registered with scope:', registration.scope);
                         })
