--- a/etc/writeonceruneverywhere.html
+++ b/etc/writeonceruneverywhere.html
@@ -9,49 +9,8 @@
     <link rel="manifest" href="">
 
     <!-- Service Worker Registration -->
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Dynamically create and assign the manifest file
-            const manifest = {
-                "name": "Hello World PWA",
-                "short_name": "HelloWorld",
-                "description": "A simple Hello World Progressive Web App",
-                "start_url": "/",
-                "display": "standalone",
-                "background_color": "#ffffff",
-                "theme_color": "#000000",
-                "icons": [
-                    {
-                        "src": "https://example.com/icon.png",
-                        "sizes": "192x192",
-                        "type": "image/png"
-                    },
-                    {
-                        "src": "https://example.com/icon-512.png",
-                        "sizes": "512x512",
-                        "type": "image/png"
-                    }
-                ]
-            };
-            
-            const manifestBlob = new Blob([JSON.stringify(manifest)], { type: 'application/json' });
-            const manifestUrl = URL.createObjectURL(manifestBlob);
-            document.querySelector("link[rel='manifest']").setAttribute('href', manifestUrl);
-
-            // Register Service Worker
-            if ('serviceWorker' in navigator) {
-                window.addEventListener('load', () => {
-                    navigator.serviceWorker.register('https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/etc/service-worker.js')
-                        .then(registration => {
-                            console.log('Service Worker registered with scope:', registration.scope);
-                        })
-                        .catch(error => {
-                            console.log('Service Worker registration failed:', error);
-                        });
-                });
-            }
-        });
-    </script>
+  <script src="etc/service-worker.js"></script>
+  <script src="etc/sw.js"></script>
 </head>
 <body>
     <script>
