--- a/etc/writeonceruneverywhere.html
+++ b/etc/writeonceruneverywhere.html
@@ -9,8 +9,8 @@
     <link rel="manifest" href="">
 
     <!-- Service Worker Registration -->
-  <script src="etc/service-worker.js"></script>
-  <script src="etc/sw.js"></script>
+  <script src="service-worker.js"></script>
+  <script src="sw.js"></script>
 </head>
 <body>
     <script>
