--- a/index.html
+++ b/index.html
@@ -25,18 +25,9 @@ h1 {
   margin-bottom: 20px;
 }
 button {
-  width: 300px;
-  padding: 12px;
-  margin: 8px 0;
-  font-size: 1rem;
-  border: none;
-  border-radius: 10px;
-  background: rgba(255, 255, 255, 0.1);
-  color: #fff;
-  cursor: pointer;
-  transition: background 0.2s;
-  backdrop-filter: blur(10px);
+body{background:#c7cad1}button{background:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.13)),radial-gradient(90% 7% at 50% 8%,rgba(255,255,255,.47) 25%,rgba(255,255,255,0) 50%),#0053d0;border:0;border-radius:.375em;box-shadow:.2em .2em .5em rgba(0,0,0,.47),0 -.1em 0 .1em rgba(0,0,0,.27),0 .1em 0 .1em rgba(255,255,255,.27),-.2em 0 .2em #003f9d inset,0 .2em .2em rgba(255,255,255,.27) inset,.2em 0 .2em rgba(255,255,255,.27) inset,0 -.2em .2em #003f9d inset;color:#fff;cursor:pointer;font:24px/1.5 sans-serif;margin:1.5em auto;padding:.5em 1em;text-shadow:0 0 .2em rgba(255,255,255,.47);transition-property:box-shadow;-webkit-tap-highlight-color:transparent}button,button span{display:block;transition-duration:.1s;transition-timing-function:linear}button span:focus,button:focus{outline:0}button span{transition-property:transform;will-change:transform}button:active{box-shadow:0 0 0 rgba(0,0,0,.47),0 -.1em 0 .1em rgba(0,0,0,.27),0 .1em 0 .1em rgba(255,255,255,.27),-.2em 0 .2em #002a6a inset,0 .2em .2em rgba(0,0,0,.27) inset,.2em 0 .2em rgba(0,0,0,.27) inset,0 -.2em .2em #002a6a inset}button:active span{transform:scale(.95)}button:focus{color:#9dc4ff;text-shadow:0 0 .2em rgba(157,196,255,.47)}
 }
+  
 button:hover {
   background: rgba(255, 255, 255, 0.2);
 }
