--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content="A group of websites">
 <title>Internetperson-dev Useful links</title>
 <link rel="icon" type="image/x-icon" href="favicon.png">
+<link rel="icon" type="image/x-icon" href="favicon.ico"> <!--Ladybird fallback-->
 <style>
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
