--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="A group of websites">
 <title>Internetperson-dev Useful links</title>
-<link rel="icon" type="image/x-icon" href="favicon.png">
+<link rel="icon" type="image/png" href="favicon.png">
 <link rel="icon" type="image/x-icon" href="favicon.ico"> <!--Ladybird fallback-->
 <style>
 body {
