--- a/etc/test.html
+++ b/etc/test.html
@@ -7,15 +7,7 @@
 <title>Test Blog</title>
 <link rel="icon" type="image/png" href="favicon.png">
 <style>
-  img{max-width:100%;height:auto}pre{max-width:100%;height:auto;white-space:pre-wrap}.np{display:flex;flex-flow:row wrap;justify-content:space-between;padding-bottom:.5em;font-style:italic}
-
-  body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  background: #1e1e1e;
-  color: #fff;
-  overflow-x: hidden; /* Allow vertical scrolling */
-}
-
+  img{max-width:100%;height:auto}pre{max-width:100%;height:auto;white-space:pre-wrap}.np{display:flex;flex-flow:row wrap;justify-content:space-between;padding-bottom:.5em;font-style:italic} body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;}
 </style>
 
 <h1>Test</h1>
