--- a/etc/test.html
+++ b/etc/test.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="A group of websites">
-<title>Test Blog</title>
-<link rel="icon" type="image/png" href="favicon.png">
-<style>
-  img{max-width:100%;height:auto}pre{max-width:100%;height:auto;white-space:pre-wrap}.np{display:flex;flex-flow:row wrap;justify-content:space-between;padding-bottom:.5em;font-style:italic} body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;} body {background-color: #1c1b22;} 
-</style>
-
-<h1>Test</h1>
-<p>This is a test.</p>
-
-</body>
+ <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A group of websites">
+  <title>Test Blog</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+  <style>
+   img {
+    max-width: 100%;
+    height: auto
+   }
+   body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+    background-color: #1c1b22;
+   }
+  </style>
+  <h1>Test</h1>
+  <p>This is a test.</p>
+  </body>
 </html>
