--- a/etc/test.html
+++ b/etc/test.html
@@ -15,6 +15,9 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
     background-color: #1c1b22;
    }
+    p {
+     color: #fbfbfe;
+   }
   </style>
   <h1>Test</h1>
   <p>This is a test.</p>
