--- a/etc/test.html
+++ b/etc/test.html
@@ -15,7 +15,10 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
     background-color: #1c1b22;
    }
-    p {
+   p {
+    color: #fbfbfe;
+   }
+   title {
      color: #fbfbfe;
    }
   </style>
