--- a/etc/test.html
+++ b/etc/test.html
@@ -5,21 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A group of websites">
   <title>Test Blog</title>
-  <link rel="icon" type="image/png" href="favicon.png">
-  <style>
+  <link rel="icon" type="image/png" href="/favicon.png">
+  <link href='https://fonts.bunny.net/css?family=Lexend Deca' rel='stylesheet'>
+  <style>   
    img {
     max-width: 100%;
     height: auto
    }
    body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
-    background-color: #1c1b22;
+    font-family: 'Lexend Deca';font-size: 22px;
+    background-color: #212121;
    }
    p {
-    color: #fbfbfe;
+    color: #FAFAFA;
    }
    h1 {
-     color: #fbfbfe;
+     color: #FAFAFA;
    }
   </style>
   <h1>Test</h1>
