--- a/etc/test.html
+++ b/etc/test.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A group of websites">
   <title>Test Blog</title>
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/png" href="/site/favicon.png">
   <link href='https://fonts.bunny.net/css?family=Lexend Deca' rel='stylesheet'>
   <style>   
    img {
