--- a/etc/test.html
+++ b/etc/test.html
@@ -6,7 +6,7 @@
   <meta name="description" content="A group of websites">
   <title>Test Blog</title>
   <link rel="icon" type="image/png" href="/site/favicon.png">
-  <link rel="preload" href="https://fonts.bunny.net/css?family=Lexend+Deca" as="style"> <!-- Prevents render blocking-->
+  <link href='https://fonts.bunny.net/css?family=Lexend Deca' rel='stylesheet'>  
     <style>
         img {
             max-width: 100%;
