--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@ button:hover {
     <script>
 function createLadybird(){const e=document.createElement("div");e.classList.add("ladybird"),e.innerText="🐞",e.style.left=Math.random()*window.innerWidth+"px",document.body.appendChild(e),setTimeout((()=>{e.remove()}),1e3)}document.addEventListener("DOMContentLoaded",(function(){if("Mozilla/5.0 (Linux; x86_64) Ladybird/1.0"===navigator.userAgent)for(let e=0;e<10;e++)setTimeout(createLadybird,500*Math.random())}));
     </script>
+
+<script>
+  function isTablet() {
+    return window.matchMedia("(min-width: 600px) and (max-width: 1024px)").matches;
+  }
+
+  const linksContainer = document.querySelector(".links");
+  if (isTablet()) {
+    linksContainer.classList.add("grid");
+  }
+});
+  
+</script>
+  
 <div class="links">
     <h1>Useful Links</h1>
     <button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button>
