--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <meta name="description" content="A group of websites">
 <title>Internetperson-dev Useful links</title>
 <link rel="icon" type="image/png" href="favicon.png">
+<!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> Ladybird fallback-->
 <style>
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   background: #1e1e1e;
   color: #fff;
-  overflow-x: hidden;
+  overflow-x: hidden; /* Allow vertical scrolling */
 }
 .links {
   display: flex;
@@ -20,20 +21,14 @@ body {
   min-height: 100vh;
   padding: 20px;
 }
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 10px;
-  justify-content: center;
-  max-width: 800px;
-}
 h1 {
   font-size: 2rem;
   margin-bottom: 20px;
 }
 button {
-  width: 100%;
+  width: 300px;
   padding: 12px;
+  margin: 8px 0;
   font-size: 1rem;
   border: none;
   border-radius: 10px;
@@ -46,64 +41,31 @@ button {
 button:hover {
   background: rgba(255, 255, 255, 0.2);
 }
-.ladybird{
-  position:absolute;
-  font-size:2rem;
-  top:0;
-  opacity:1;
-  pointer-events:none;
-  animation:fall 3s linear forwards;
-}
-@keyframes fall {
-  from { transform: translateY(-50px); opacity:1; }
-  to { transform: translateY(100vh); opacity:0; }
-}
+.ladybird{position:absolute;font-size:2rem;top:0;opacity:1;pointer-events:none;animation:fall 3s linear forwards}@keyframes fall{from{transform:translateY(-50px);opacity:1}to{transform:translateY(100vh);opacity:0}}
 </style>
 </head>
 <body>
-<script>
-function createLadybird(){
-  const e = document.createElement("div");
-  e.classList.add("ladybird");
-  e.innerText = "🐞";
-  e.style.left = Math.random() * window.innerWidth + "px";
-  document.body.appendChild(e);
-  setTimeout(() => { e.remove(); }, 1000);
-}
-
-document.addEventListener("DOMContentLoaded", function() {
-  if ("Mozilla/5.0 (Linux; x86_64) Ladybird/1.0" === navigator.userAgent) {
-    for (let e = 0; e < 10; e++) setTimeout(createLadybird, 500 * Math.random());
-  }
-
-  function isTablet() {
-    return window.matchMedia("(min-width: 600px) and (max-width: 1024px)").matches;
-  }
-
-  const linksContainer = document.querySelector(".links");
-  if (isTablet()) {
-    linksContainer.classList.add("grid");
-  }
-});
-</script>
+    <script>
+function createLadybird(){const e=document.createElement("div");e.classList.add("ladybird"),e.innerText="🐞",e.style.left=Math.random()*window.innerWidth+"px",document.body.appendChild(e),setTimeout((()=>{e.remove()}),1e3)}document.addEventListener("DOMContentLoaded",(function(){if("Mozilla/5.0 (Linux; x86_64) Ladybird/1.0"===navigator.userAgent)for(let e=0;e<10;e++)setTimeout(createLadybird,500*Math.random())}));
+    </script>
 <div class="links">
-  <h1>Useful Links</h1>
-  <button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button>
-  <button onclick="location.href='https://github.com/Internetperson-dev/Linux-Desktop-Setup'">Linux Desktop Setup</button>
-  <button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
-  <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
-  <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
-  <button onclick="location.href='https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/'">SNES Emu</button>
-  <button onclick="location.href='https://www.supersmashflash.com/play/ssf1/'">Super Smash Flash</button>
-  <button onclick="location.href='https://kbhgames.com/game/super-smash-flash-2'">Super Smash Flash 2</button>
-  <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
-  <button onclick="location.href='https://internetperson-dev.github.io/site/etc/fortnitepwa/index.html'">Fortnite PWA</button>
-  <button onclick="location.href='https://yell0wsuit.page/assets/games/angry-birds-chrome/index.html'">Angry Birds Chrome</button>
-  <button onclick="location.href='https://kinoposts.web.app/test/playlistmaker.html'">Music PWA Test</button>
-  <button onclick="location.href='https://calculator.apps.chrome/'">Google Calculator PWA</button>
-  <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-bad.html'">yt-bad</button>
-  <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-good.html'">yt-good</button>
-  <footer>Created by Internetperson-dev</footer>
+    <h1>Useful Links</h1>
+    <button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button>
+    <button onclick="location.href='https://github.com/Internetperson-dev/Linux-Desktop-Setup'">Linux Desktop Setup</button>
+    <button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
+    <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
+    <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
+    <button onclick="location.href='https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/'">SNES Emu</button>
+    <button onclick="location.href='https://www.supersmashflash.com/play/ssf1/'">Super Smash Flash</button>
+    <button onclick="location.href='https://kbhgames.com/game/super-smash-flash-2'">Super Smash Flash 2</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/etc/fortnitepwa/index.html'">Fortnite PWA</button>
+    <button onclick="location.href='https://yell0wsuit.page/assets/games/angry-birds-chrome/index.html'">Angry Birds Chrome</button>
+    <button onclick="location.href='https://kinoposts.web.app/test/playlistmaker.html'">Music PWA Test</button>
+    <button onclick="location.href='https://calculator.apps.chrome/'">Google Caculator PWA</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-bad.html'">yt-bad</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-good.html'">yt-good</button>
+    <footer>Created by Internetperson-dev</footer>
 </div>
 </body>
 </html>
