--- a/Gentoo Linux Steam Playstation Controller Steam Input Fix.html
+++ b/Gentoo Linux Steam Playstation Controller Steam Input Fix.html
@@ -1,64 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Gentoo Linux Steam Playstation Controller Steam Input Fix">
-<title>Gentoo Linux Steam Playstation Controller Steam Input Fix
-</title>
-<link rel="icon" type="image/png" href="favicon.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Gentoo Linux Steam Playstation Controller Steam Input Fix">
+  <title>Gentoo Linux Steam Playstation Controller Steam Input Fix</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: #1e1e1e;
+      color: #fff;
+      overflow-x: hidden;
+      padding: 2rem;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    code, pre {
+      background-color: #2d2d2d;
+      padding: 0.5rem;
+      border-radius: 4px;
+      display: block;
+      white-space: pre-wrap;
+      margin: 1rem 0;
+    }
+    a {
+      color: #61dafb;
+    }
+  </style>
+</head>
+<body>
 
-<style>
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  background: #1e1e1e;
-  color: #fff;
-  overflow-x: hidden; /* Allow vertical scrolling */
-}
-}
-h1 {
-  font-size: 2rem;
-  margin-bottom: 20px;
-}
-</style>
+<h1>Gentoo Linux Steam Playstation Controller Steam Input Fix</h1>
 
+<p>Make sure all udev rules are correct.</p>
 
-<h1>Gentoo Linux Steam Playstation Controller Steam Input Fix  </h1>
+<p>Add everything from this repo:</p>
 
-<p>
+<pre><a href="https://codeberg.org/fabiscafe/game-devices-udev" target="_blank">https://codeberg.org/fabiscafe/game-devices-udev</a></pre>
 
-Make sure all udev rules are correct
+<p>Copy the rules to:</p>
 
-Add everything from here 
+<pre>/etc/udev/rules.d</pre>
 
-https://codeberg.org/fabiscafe/game-devices-udev
+<p>Then reload udev rules:</p>
 
-to
+<pre>sudo udevadm control --reload-rules && udevadm trigger</pre>
 
-/etc/udev/rules.d
+<p>You may also have to add more rules manually:</p>
 
-Than run sudo udevadm control --reload-rules && udevadm trigger 
+<pre><code># Valve HID devices over bluetooth hidraw
+echo -e 'KERNEL=="hidraw*", KERNELS=="*28DE:*", MODE="0666"' >> /etc/udev/rules.d/99-steam-controller-perms.rules
 
-But you may also have to add more rules
+# Dualshock 4 over bluetooth hidraw
+echo -e 'KERNEL=="hidraw*", KERNELS=="*054C:05C4*", MODE="0666"' >> /etc/udev/rules.d/99-steam-controller-perms.rules
 
-sudo echo -e "# Valve HID devices over bluetooth hidraw\nKERNEL==\"hidraw*\", KERNELS==\"*28DE:*\", MODE=\"0666\"" >> /etc/udev/rules.d/99-steam-controller-perms.rules
-sudo echo -e "# Dualshock 4 over bluetooth hidraw\nKERNEL==\"hidraw*\", KERNELS==\"*054C:05C4*\", MODE=\"0666\"" >> /etc/udev/rules.d/99-steam-controller-perms.rules
-sudo echo -e "# Dualshock 4 Slim over bluetooth hidraw\nKERNEL==\"hidraw*\", KERNELS==\"*054C:09CC*\", MODE=\"0666\"" >> /etc/udev/rules.d/99-steam-controller-perms.rules
-udevadm trigger
+# Dualshock 4 Slim over bluetooth hidraw
+echo -e 'KERNEL=="hidraw*", KERNELS=="*054C:09CC*", MODE="0666"' >> /etc/udev/rules.d/99-steam-controller-perms.rules
+</code></pre>
 
+<p>Apply the changes:</p>
 
-And pray everything works
+<pre>udevadm trigger</pre>
 
+<p>And pray everything works:</p>
+
+<pre>
 sudo udevadm control --reload-rules && sudo udevadm trigger
 sudo /etc/init.d/udev restart
+</pre>
 
-Ensure you are in the input group
+<p>Ensure your user is in the <code>input</code> group:</p>
 
-gpasswd -a USER input
+<pre>gpasswd -a USER input</pre>
 
-And some Gentoo package is installed
- 
-sudo emerge game-device-udev-rules
+<p>Install the necessary Gentoo package:</p>
 
-You may have to run steam with --no-sandbox and install proton-ge
-</p>
+<pre>sudo emerge game-device-udev-rules</pre>
+
+<p>You may also need to run Steam with <code>--no-sandbox</code> and install Proton GE:</p>
+
+<pre>./Steam.AppImage --no-sandbox</pre>
+
+</body>
+</html>
