Controller fix for Steam Link/Proton
I really want to play P5S.

--- a/Gentoo Linux Steam Playstation Controller Steam Input Fix.html
+++ b/Gentoo Linux Steam Playstation Controller Steam Input Fix.html
@@ -37,7 +37,7 @@
 
 <p>Make sure all udev rules are correct.</p>
 
-<p>Add everything from this repo:</p>
+<p>Add all the rules from here</p>
 
 <pre><a href="https://codeberg.org/fabiscafe/game-devices-udev" target="_blank">https://codeberg.org/fabiscafe/game-devices-udev</a></pre>
 
