Update Gentoo Linux Steam Playstation Controller Steam Input Fix.html

--- a/Gentoo Linux Steam Playstation Controller Steam Input Fix.html
+++ b/Gentoo Linux Steam Playstation Controller Steam Input Fix.html
@@ -72,7 +72,7 @@ sudo udevadm control --reload-rules && sudo udevadm trigger
 sudo /etc/init.d/udev restart
 </pre>
 
-<p>Ensure your user is in the <code>input</code> group:</p>
+<p>Ensure your user is in the input group:</p>
 
 <pre>gpasswd -a USER input</pre>
 
